# drakon

./: .gitignore  CMakeLists.txt  Makefile
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: check.yaml  ci-mac.yaml  ci.yaml
ISSUE_TEMPLATE/: bug.yaml
docs/: CNAME  index.html
examples/hello/: CMakeLists.txt  HelloGame.h  HelloScene.h  HelloTexture.h  Makefile  OtherScene.h  main.cpp  smile_icon.h
include/: drakon.h
include/drakon/: component  entity  error  error.h  event  event.h  game  game.h  input  input.h  prelude.h  scene  scene.h  system
include/drakon/_component/: BehaviorComponent.h  ComponentCollection.h  ComponentManager.h  ComponentTypeId.h  IComponent.h  LogComponent.h  PositionComponent.h  PrintComponent.h  TextureComponent.h  component.h
include/drakon/_entity/: Entity.h  entity.h
include/drakon/_error/: Error.h  error.h
include/drakon/_event/: ApplicationEvent.h  ApplicationEventData.h  CustomEventData.h  Event.h  (+8 more)
sdlwiki/SDL3/: APIByCategory.html  Articles.html  BestKeyboardPractices.html  CategoryAPI.html  CategoryAPICategory.html  CategoryAPIDatatype.html  CategoryAPIEnum.html  CategoryAPIEnumerators.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  CategoryAssert.html  CategoryAtomic.html  CategoryAudio.html  CategoryCPUInfo.html  CategoryCamera.html  CategoryEvents.html  CategoryGPU.html  CategoryGamepad.html  CategoryHIDAPI.html  CategoryHints.html  CategoryIntrinsics.html  CategoryJoystick.html  CategoryMain.html  CategoryMouse.html  CategoryPen.html  CategoryPlatform.html  CategoryProperties.html  CategoryRender.html  CategoryStdinc.html  CategorySurface.html  CategorySystem.html  CategoryThread.html  CategoryTimer.html  CategoryTray.html  CategoryVideo.html  FAQDevelopment.html  FAQGeneral.html  FAQUsingSDL.html  FAQs.html  (+514 more)
sdlwiki/SDL3_image/: CategoryAPI.html  CategoryAPICategory.html  CategoryAPIDatatype.html  CategoryAPIEnum.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  CategorySDLImage.html  IMG_Animation.html  IMG_FreeAnimation.html  IMG_Load.html  IMG_LoadAVIF_IO.html  IMG_LoadAnimation.html  IMG_LoadAnimationTyped_IO.html  IMG_LoadAnimation_IO.html  IMG_LoadBMP_IO.html  IMG_LoadCUR_IO.html  IMG_LoadGIFAnimation_IO.html  IMG_LoadGIF_IO.html  IMG_LoadICO_IO.html  IMG_LoadJPG_IO.html  IMG_LoadJXL_IO.html  IMG_LoadLBM_IO.html  IMG_LoadPCX_IO.html  IMG_LoadPNG_IO.html  IMG_LoadPNM_IO.html  IMG_LoadQOI_IO.html  IMG_LoadSVG_IO.html  IMG_LoadSizedSVG_IO.html  IMG_LoadTGA_IO.html  IMG_LoadTIF_IO.html  IMG_LoadTexture.html  IMG_LoadTextureTyped_IO.html  IMG_LoadTexture_IO.html  IMG_LoadTyped_IO.html  IMG_LoadWEBPAnimation_IO.html  IMG_LoadWEBP_IO.html  IMG_LoadXCF_IO.html  IMG_LoadXPM_IO.html  IMG_LoadXV_IO.html  (+34 more)
sdlwiki/SDL3_mixer/: CategoryAPI.html  CategoryAPICategory.html  CategoryAPIDatatype.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  CategorySDLMixer.html  MIX_Audio.html  MIX_AudioDecoder.html  MIX_AudioFramesToMS.html  MIX_AudioMSToFrames.html  MIX_CreateAudioDecoder.html  MIX_CreateAudioDecoder_IO.html  MIX_CreateGroup.html  MIX_CreateMixer.html  MIX_CreateMixerDevice.html  MIX_CreateSineWaveAudio.html  MIX_CreateTrack.html  MIX_DURATION_INFINITE.html  MIX_DURATION_UNKNOWN.html  MIX_DecodeAudio.html  MIX_DestroyAudio.html  MIX_DestroyAudioDecoder.html  MIX_DestroyGroup.html  MIX_DestroyMixer.html  MIX_DestroyTrack.html  MIX_FramesToMS.html  MIX_Generate.html  MIX_GetAudioDecoder.html  MIX_GetAudioDecoderFormat.html  MIX_GetAudioDecoderProperties.html  MIX_GetAudioDuration.html  MIX_GetAudioFormat.html  MIX_GetAudioProperties.html  MIX_GetGroupMixer.html  MIX_GetGroupProperties.html  MIX_GetMasterGain.html  MIX_GetMixerFormat.html  MIX_GetMixerProperties.html  MIX_GetNumAudioDecoders.html  (+100 more)
sdlwiki/SDL3_net/: CategoryAPI.html  CategoryAPICategory.html  CategoryAPIDatatype.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  CategorySDLNet.html  NET_AcceptClient.html  NET_Address.html  NET_CompareAddresses.html  NET_CreateClient.html  NET_CreateDatagramSocket.html  NET_CreateServer.html  NET_Datagram.html  NET_DatagramSocket.html  NET_DestroyDatagram.html  NET_DestroyDatagramSocket.html  NET_DestroyServer.html  NET_DestroyStreamSocket.html  NET_FreeLocalAddresses.html  NET_GetAddressStatus.html  NET_GetAddressString.html  NET_GetConnectionStatus.html  NET_GetLocalAddresses.html  NET_GetStreamSocketAddress.html  NET_GetStreamSocketPendingWrites.html  NET_Init.html  NET_Quit.html  NET_ReadFromStreamSocket.html  NET_ReceiveDatagram.html  NET_RefAddress.html  NET_ResolveHostname.html  NET_SendDatagram.html  NET_Server.html  NET_SimulateAddressResolutionLoss.html  NET_SimulateDatagramPacketLoss.html  NET_SimulateStreamPacketLoss.html  NET_StreamSocket.html  NET_UnrefAddress.html  NET_Version.html  (+13 more)
sdlwiki/SDL3_ttf/: CategoryAPI.html  CategoryAPICategory.html  CategoryAPIDatatype.html  CategoryAPIEnum.html  CategoryAPIEnumerators.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  CategorySDLTTF.html  QuickReference.html  QuickReferenceNoUnicode.html  SDL_TTF_MAJOR_VERSION.html  SDL_TTF_VERSION.html  SDL_TTF_VERSION_ATLEAST.html  TTF_AddFallbackFont.html  TTF_AppendTextString.html  TTF_ClearFallbackFonts.html  TTF_CloseFont.html  TTF_CopyFont.html  TTF_CopyOperationFlags.html  TTF_CreateGPUTextEngine.html  TTF_CreateGPUTextEngineWithProperties.html  TTF_CreateRendererTextEngine.html  TTF_CreateRendererTextEngineWithProperties.html  TTF_CreateSurfaceTextEngine.html  TTF_CreateText.html  TTF_DIRECTION_BTT.html  TTF_DIRECTION_INVALID.html  TTF_DIRECTION_LTR.html  TTF_DIRECTION_RTL.html  TTF_DIRECTION_TTB.html  TTF_DeleteTextString.html  TTF_DestroyGPUTextEngine.html  TTF_DestroyRendererTextEngine.html  TTF_DestroySurfaceTextEngine.html  TTF_DestroyText.html  TTF_Direction.html  TTF_DrawRendererText.html  TTF_DrawSurfaceText.html  TTF_FONT_WEIGHT_BLACK.html  (+172 more)
src/: drakon.cpp
src/drakon/: IGame.cpp  IScene.cpp  error.cpp  event.cpp  game.cpp  scene.cpp
stubs/: struct.h
(+40 files in other folders)
